--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.e308ff8e.css">
-<script src="/style.e308ff8e.js"></script></head>
+    <link rel="stylesheet" href="style.c6e1f7c0.css">
+</head>
 <body id="body">
-    <script src="/main.1f19ae8e.js"></script>
+    <script src="main.0a4a900a.js"></script>
 </body>
 </html>
