--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
+    <h1>Vaccine Listing</h1>
     <script src="main.js"></script>
 </body>
 </html>
