--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body id="body">
+<body>
     <h1>Vaccine Listing</h1>
+    <p>Vaccine centers listing will appear here once available</p>
+    <div id="body"></div>
     <script src="main.js"></script>
 </body>
 </html>
