--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.c6e1f7c0.css">
+    <link rel="stylesheet" href="style.83d877ac.css">
 </head>
-<body id="body">
-    <script src="main.0a4a900a.js"></script>
+<body>
+    <h1>Vaccine Listing</h1>
+    <p>Vaccine centers listing will appear here once available</p>
+    <div id="body"></div>
+    <script src="main.f5105430.js"></script>
 </body>
 </html>
