--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <h1>Vaccine Listing</h1>
     <p>Vaccine centers listing will appear here once available</p>
+    <p id="loading"></p>
     <div id="body"></div>
-    <script src="main.5114d299.js"></script>
+    <script src="main.2f4ca440.js"></script>
 </body>
 </html>
