--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Vaccine Listing</h1>
     <p>Vaccine centers listing will appear here once available</p>
+    <!-- <p id="loading"></p> -->
     <div id="body"></div>
     <script src="main.js"></script>
 </body>
