--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Vaccine Listing</h1>
     <p>Vaccine centers listing will appear here once available</p>
-    <p id="loading"></p>
+    <!-- <p id="loading"></p> -->
     <div id="body"></div>
-    <script src="main.9e0a197e.js"></script>
+    <script src="main.855ba0a7.js"></script>
 </body>
 </html>
