--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.f734924e.css">
-</head>
+    <!-- <link rel="stylesheet" href="style.scss"> -->
+<link rel="stylesheet" href="main.c5c76aa3.css"></head>
 <body>
     <h1>Vaccine Listing</h1>
     <p>Vaccine centers listing will appear here once available</p>
     <!-- <p id="loading"></p> -->
     <div id="body"></div>
-    <script src="main.ace2b100.js"></script>
+    <script src="main.19acaf8a.js"></script>
 </body>
 </html>
