--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <!-- <link rel="stylesheet" href="style.scss"> -->
 </head>
 <body>
-    <h1>Vaccine Listing</h1>
-    <p>Vaccine centers listing will appear here once available</p>
+    <header>
+        <h1>Vaccine Availability Checker</h1>
+    </header>
     <!-- <p id="loading"></p> -->
     <div id="body"></div>
+    <footer>
+        <a href="https://t.me/sagarrn23">Sagar Chaudhari</a>
+        <a href="https://github.com/sagarrn23/vaccine-hai-kya">GitHub</a>
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
