--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaccine Hai Kya</title>
     <!-- <link rel="stylesheet" href="style.scss"> -->
-<link rel="stylesheet" href="main.c5c76aa3.css"></head>
+<link rel="stylesheet" href="main.0f98b68d.css"></head>
 <body>
-    <h1>Vaccine Listing</h1>
-    <p>Vaccine centers listing will appear here once available</p>
+    <header>
+        <h1>Vaccine Availability Checker</h1>
+    </header>
     <!-- <p id="loading"></p> -->
     <div id="body"></div>
-    <script src="main.12c42df0.js"></script>
+    <footer>
+        <a href="https://t.me/sagarrn23">Sagar Chaudhari</a>
+        <a href="https://github.com/sagarrn23/vaccine-hai-kya">GitHub</a>
+    </footer>
+    <script src="main.21068cb0.js"></script>
 </body>
 </html>
