--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@ gtag('js', new Date());
 gtag('config', 'UA-73844613-1');</script>
 
     <!-- <link rel="stylesheet" href="style.scss"> -->
-<link rel="stylesheet" href="main.0f98b68d.css"></head>
+<link rel="stylesheet" href="main.ed3bd270.css"></head>
 <body>
     <header>
         <h1>Vaccine Availability Checker</h1>
     </header>
     <!-- <p id="loading"></p> -->
-    <div id="body"></div>
+    <div class="audio-wrap">
+        <audio id="notification" controls="" src="notification_xperia.b1e95171.mp3">
+                Your browser does not support the
+                <code>audio</code> element.
+        </audio>
+    </div>
+    <div id="body">
+    </div>
     <footer>
         <a href="https://t.me/sagarrn23">Sagar Chaudhari</a>
         <a href="https://github.com/sagarrn23/vaccine-hai-kya">GitHub</a>
     </footer>
-    <script src="main.825302c0.js"></script>
+    <script src="main.5adbad2f.js"></script>
 </body>
 </html>
