--- a/index.html
+++ b/index.html
@@ -23,18 +23,11 @@ gtag('config', 'UA-73844613-1');</script>
         <h1>Vaccine Availability Checker</h1>
     </header>
     <!-- <p id="loading"></p> -->
-    <div class="audio-wrap">
-        <audio id="notification" controls="" src="notification_xperia.b1e95171.mp3">
-                Your browser does not support the
-                <code>audio</code> element.
-        </audio>
-    </div>
-    <div id="body">
-    </div>
+    <div id="body"></div>
     <footer>
         <a href="https://t.me/sagarrn23">Sagar Chaudhari</a>
         <a href="https://github.com/sagarrn23/vaccine-hai-kya">GitHub</a>
     </footer>
-    <script src="main.f9936e74.js"></script>
+    <script src="main.825302c0.js"></script>
 </body>
 </html>
