--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@ gtag('js', new Date());
 gtag('config', 'UA-73844613-1');</script>
 
     <!-- <link rel="stylesheet" href="style.scss"> -->
-<link rel="stylesheet" href="main.0f98b68d.css"></head>
+<link rel="stylesheet" href="main.66052c60.css"></head>
 <body>
     <header>
-        <h1>Vaccine Availability Checker</h1>
+        <h1>Vaccine Availability Notifier</h1>
     </header>
-    <!-- <p id="loading"></p> -->
     <div id="body"></div>
     <footer>
         <a href="https://t.me/sagarrn23">Sagar Chaudhari</a>
-        <a href="https://github.com/sagarrn23/vaccine-hai-kya">GitHub</a>
+        <a href="https://github.com/sagarrn23/">GitHub</a>
     </footer>
-    <script src="main.825302c0.js"></script>
+    <script src="main.69d38e7f.js"></script>
 </body>
 </html>
