--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 </head>
 <body>
     <header>
-        <h1>Vaccine Availability Checker</h1>
+        <h1>Vaccine Availability Notifier</h1>
     </header>
-    <!-- <p id="loading"></p> -->
     <div id="body"></div>
     <footer>
         <a href="https://t.me/sagarrn23">Sagar Chaudhari</a>
-        <a href="https://github.com/sagarrn23/vaccine-hai-kya">GitHub</a>
+        <a href="https://github.com/sagarrn23/">GitHub</a>
     </footer>
     <script src="main.js"></script>
 </body>
